--- a/extension.properties
+++ b/extension.properties
@@ -2,4 +2,4 @@ name=@extname@
 description=Loader for Xbox Executable files (.xbe)
 author=Jonas Schievink
 createdOn=
-version=@extversion@
+version=0.1.0
